<resources>
    <string name="app_name">TicTacToe</string>
    <string name="Hometile">Tic Tac Toe</string>

    <string name="playButton">Play</string>
    <string name="PlayerSetupTitle">Enter Your Name</string>
    <string name="Label1">Player 1</string>
    <string name="Label2">Player 2</string>
    <string name="submitButton">Submit Names</string>
    <string name="NameHint">Enter Your Name</string>

    <string name="playAgainButton">Play Again</string>
    <string name="homeButton">Home</string>
</resources>